fix: xs & sm overflows

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -10,6 +10,11 @@ body {
   font-size: 16px;
 }
 
+* {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
+
 .text-muted {
     color: @gray;
 }
